--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
     <title>firstGitHub Title</title>
 </head>
 <body>
-    
+    <p>
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. In necessitatibus, molestias, reprehenderit odit et magnam cupiditate debitis tempora excepturi ipsum, officia hic aspernatur? Optio earum consectetur doloremque hic fuga voluptate!
+    </p>
 </body>
 </html>
